mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
    tier: backend
spec:
    replicas: 1
    selector:
      matchLabels:
        app: mariadb
        tier: backend
    template:
      metadata:
        labels:
          app: mariadb
          tier: backend
      spec:
        volumes:
          - name: mariadb-vol
            persistentVolumeClaim:
              claimName: pvc-bookmedik
        containers:
          - name: contenedor-mariadb
            image: mariadb
            ports:
              - containerPort: 3306
                name: mariadb-port
            volumeMounts:
              - name: mariadb-vol
                mountPath: /var/lib/mysql
