bookmedik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmedik
  labels:
    app: bookmedik
    tier: frontend
spec:
  type: NodePort
  ports:
  - name: http-port
    port: 80
    targetPort: http-port
  - name: https-port
    port: 443
    targetPort: https-port
  type: NodePort
  selector:
    app: bookmedik
    tier: frontend
