bookmedik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmedik-ingress
spec:
  rules:
  - host: www.bookmedik-arantxa.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bookmedik
              port:
                number: 80
